fix white space (test)

--- a/bodydough-app/src/app/globals.css
+++ b/bodydough-app/src/app/globals.css
@@ -26,6 +26,7 @@ body {
     rgb(var(--background-start-rgb));*/
     padding: 0;
     margin: 0;
+    max-height: 100%;
     overflow-x: auto;
     overflow-y: auto;
     scrollbar-track-color: transparent;
